--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -90,4 +90,8 @@
   <string name="google_search_hint_text">使用 Google 搜索，或者输入网址</string>
   <string name="blank_tile_title">添加网站</string>
   <string name="dialog_clear_cookies_title">清除 Cookie？</string>
+  <string name="request_desktop_site_a11y">要求此站点的桌面版</string>
+  <string name="notification_request_desktop_site">已发出桌面版请求</string>
+  <string name="notification_request_non_desktop_site">返回非桌面版</string>
+  <string name="youtube_casting_onboarding_toast">用您的手机或平板电脑投屏 YouTube 视频。在您的设备上打开 YouTube，然后点按 %s 即可开始使用。</string>
 </resources>
