--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -90,4 +90,8 @@
   <string name="google_search_hint_text">Buscar con Google o introducir la dirección</string>
   <string name="blank_tile_title">Añadir un sitio web</string>
   <string name="dialog_clear_cookies_title">¿Limpiar cookies?</string>
+  <string name="request_desktop_site_a11y">Pedir la versión de escritorio del sitio</string>
+  <string name="notification_request_desktop_site">Se ha pedido la versión de escritorio</string>
+  <string name="notification_request_non_desktop_site">Se vuelve a la versión predeterminada</string>
+  <string name="youtube_casting_onboarding_toast">Transmite vídeos de YouTube desde tu móvil o tableta. Abre YouTube en tu dispositivo y pulsa %s para comenzar.</string>
 </resources>
