--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -90,4 +90,8 @@
   <string name="google_search_hint_text">Cerca con Google o inserisci un indirizzo</string>
   <string name="blank_tile_title">Aggiungi un sito web</string>
   <string name="dialog_clear_cookies_title">Eliminare i cookie?</string>
+  <string name="request_desktop_site_a11y">Richiedi la versione desktop di questo sito</string>
+  <string name="notification_request_desktop_site">Versione desktop richiesta</string>
+  <string name="notification_request_non_desktop_site">Versione desktop disattivata</string>
+  <string name="youtube_casting_onboarding_toast">Guarda i video YouTube dal cellulare o dal tablet. Apri YouTube nel dispositivo e tocca %s per iniziare.</string>
 </resources>
